<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Math &amp; Magic</string>
    <string name="action_settings">Settings</string>
    <string name="menu_take_photo">Take Photo</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_ocr">OCR</string>
    <string name="start_button">Tap anywhere to start</string>
	<string name="help_button">Help</string>
	<string name="info_button">Information</string>
	
	<string name="info_head1">Version Number: 0.6</string>
	<string name="info_head2">Last Updated: October 16, 2014</string>
	<string name="info_head3">Contributors:</string>
	<string name="contribs">Tan, Carl Stephen\nYazaki, Koichi\n-   Special Thanks To   -\nAgbisit, Carl Patrick</string>
	<string name="OK">OK</string>
	
	<string name="calc">Calculate</string>
	<string name="result_holder">\n y=2x+3z-4w\n y=3x-5z-6w\n y=7x-2z+4w</string>
	<string name="result_hint">Answers will be displayed here</string>
	
	<string name="desc">Image here</string>
	
	<string name="pg1_h">Step 1: \nUse the Camera to take a picture of a linear equation.</string>
	<string name="pg1_i">OR\nSelect a picture taken beforehand from your Gallery.</string>
	<string name="pg2_h">Step 2: \nClick on the OCR Button while the picture you\'ve chosen is shown.</string>
	<string name="pg3_h">The detected equation is shown on the line above.</string>
	<string name="pg3_i">Finally, click on Calculate to solve.</string>
	
</resources>
