<!-- Could use include tag to separate each page -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    tools:context="com.myapp.thesis.CustomHelp"
    tools:ignore="MergeRootFrame" >

    <com.myapp.thesis.CustomFlipper
        android:id="@+id/flip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <FrameLayout
            android:id="@+id/pg1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/pg1_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/desc"
                    android:scaleType="fitXY"
                    android:src="@drawable/view2y" />

                <TextView
                    android:id="@+id/pg1_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:gravity="center_horizontal"
                    android:text="@string/pg1_h"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pg2_txte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pg1_txt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/pg1_i"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </RelativeLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/pg2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/pg2_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/desc"
                    android:scaleType="fitXY"
                    android:src="@drawable/view2g" />

                <TextView
                    android:id="@+id/pg2_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="100dp"
                    android:gravity="center_horizontal"
                    android:text="@string/pg2_h"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </RelativeLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/pg3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#000000" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/pg3_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/desc"
                    android:scaleType="fitXY"
                    android:src="@drawable/view3e" />

                <TextView
                    android:id="@+id/pg3_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/pg3_h"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pg3_txte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pg3_txt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/pg3_i"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </RelativeLayout>
        </FrameLayout>
    </com.myapp.thesis.CustomFlipper>

</RelativeLayout>